# 4del

Sphinx-essentials/: discoveries.rst  ideas.rst  index.rst
bashrc/: index.rst
c_or_cpp/: main.c
constexpr_ref/: constexpr_ref.h  main.cpp  module.cpp
cpp_var_init/: init.cpp
portage_kde_6/: update-plasma-meta.py
semicolon_inside_if_parentheses/: main.cpp
std-print/: main.cpp
v4l2_emulation/: emulate_common.hpp  emulate_dup.cpp  emulate_fopen.cpp  emulate_ioctl.cpp  emulate_mmap.cpp  emulate_open.cpp  emulate_openat.cpp  emulate_stat.cpp  emulate_syscall.cpp  meson.build
washing machine/: db.py
